# Chat_Client

./: CMakeLists.txt  ModelColums.h  Uns.glade  client  gtk  main.cpp
C/: Controller.cpp  Controller.h
I/: IClient.h  IView.h
N/: Client.h  UnixClient.cpp  WinClient.cpp
View/: View.cpp  View.h
